# hagedag

./: .gitignore  README.md
PCB/: GB2.kicad_pcb  GB2.kicad_pcb-bak  GB2.pro  GB2.sch  MotorDriver.sch  fp-info-cache  fp-lib-table  sym-lib-table
PCB/Gerber/: GB2-B_Cu.gbl  GB2-B_Mask.gbs  GB2-B_SilkS.gbo  GB2-Edge_Cuts.gm1  GB2-F_Cu.gtl  GB2-F_Mask.gts  GB2-F_SilkS.gto  GB2.drl
PCB/STM-nano.pretty/: STM-Nano.kicad_mod
STM32/: .gitignore
STM32/src/main/: Robot2.eww
control/: .gitignore  GPS.py  Map.py  Plotting.py  RobotMessages.py  RobotModel.py  RobotState.py  colors.py  control.py  controltime.py  diff.py  fencebump.py  garden.yaml  geometry.py  jsonobject.py  logging.yaml  main.py  mission.yaml  motion.py  play.py  pubsub.py  pyproject.toml  record.py  record.yaml  robot.py  robot3.py  server.py  state.py  test_GPS.py  test_RobotState.py  tracking.py  video.py
control/simulation/: PID.py  Plot.py  Plotting.py  main.py  particle_filter.py  state.py  statistics.py
control/test/: controld.py
control/video/: .gitignore  flow.py  jsonobject.py  logging.yaml  robot.py  video.py
gui/: canvas.html  fence.json
raspberry/: package-lock.json  package.json
raspberry/control/: HTTPWebSocketsHandler.py  INA3221.py  control.py  controld.py  controld.service  current.py  cutter.py  httpd-post.py  httpd.py  httpd.service  servo.py
raspberry/control/init.d/: httpd-control
raspberry/gps/: gps.js  gps.service  ntrip.js  package-lock.json  package.json  serial.js  server.js
raspberry/gui/: README.md  control.html  package-lock.json  style.css  ws.html  ws2.html
(+30 files in other folders)
