[tool.poetry]
name = "spot-websocket"
version = "0.3.0"
description = ""
authors = ["Øystein Haug Olsen <oystein.olsen@cognite.com>"]

packages = [
    { include=".", from="." },
]

[tool.poetry.dependencies]
python = "^3.7"
services = "^0.1.1"
aiohttp = "^3.6.2"
websockets = "^8.1"
utm = "^0.5.0"
numpy = "^1.19.0"
matplotlib = "^3.2.2"
aiofiles = "^0.5.0"
shapely = "^1.7.0"
pyyaml = "^5.3.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
pytest-asyncio = "^0.12.0"
asynctest = "^0.13.0"

[tool.poetry.scripts]
main = "services.main:main"
controlclient = "tests.controlclient:main"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

